# ros_object_map

./: .gitignore  CHANGELOG.rst  README.md
object_map/: CMakeLists.txt  package.xml  setup.py
object_map/launch/: object_map.launch
object_map/msg/: Object.msg  ObjectInfo.msg  Objects.msg
object_map/nodes/: object_map_node.py  test_conf.py  test_object_filter.py
object_map/src/object_map/: __init__.py  conf.py  object_filter.py  object_marker.py
