<?xml version="1.0"?>
<!--
Copyright (c) 2017 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package>
  <name>object_map</name>
  <version>0.0.0</version>
  <description>The ROS object map package</description>
  <author email="tony.guo@intel.com">Guo Tony</author>
  <author email="chris.ye@intel.com">Chris Ye</author>
  <maintainer email="chris.ye@intel.com">Chris Ye</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/intel/ros_object_map</url>
  <url type="bugtracker">https://github.com/intel/ros_object_map/issues</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>object_analytics_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>object_analytics_msgs</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
